changing CORS, clever.json