@@ -1,5 +1,8 @@
 package com.hugo.project.service;
 
+import com.google.api.core.ApiFuture;
+import com.google.cloud.firestore.*;
+import com.google.firebase.cloud.FirestoreClient;
 import com.hugo.project.exception.EmptyIdException;
 import com.hugo.project.exception.EmptyNameException;
 import com.hugo.project.exception.NameAlreadyTakenException;
@@ -15,42 +18,43 @@ import com.hugo.project.model.search.SearchProjectResponse;
 import com.hugo.project.model.search.SearchProjectResponseEnum;
 import com.hugo.project.model.update.UpdateProjectResponse;
 import com.hugo.project.model.update.UpdateProjectResponseEnum;
-import com.hugo.project.repository.ProjectRepo;
-import io.micrometer.common.util.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.ComponentScan;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.validation.annotation.Validated;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
+import java.util.concurrent.ExecutionException;
 
 @Service
-@Validated
-@ComponentScan(basePackages = "com.hugo.project")
 public class ProjectService {
+    private static final String COLLECTION_NAME = "project";
 
-    @Autowired
-    private ProjectRepo projectRepo;
+    private List<Project> getAllProjects() throws ExecutionException, InterruptedException {
+        Firestore firestore = FirestoreClient.getFirestore();
+        List<Project> projects = new ArrayList<>();
+        CollectionReference collectionRef = firestore.collection(COLLECTION_NAME);
+        ApiFuture<QuerySnapshot> future = collectionRef.get();
 
-    public Iterable<Project> getAllProjects() {
-        return projectRepo.findAll();
+        List<QueryDocumentSnapshot> documents = future.get().getDocuments();
+
+        documents.forEach(doc -> {
+            Project project = doc.toObject(Project.class);
+            project.setId(doc.getId());
+            projects.add(project);
+        });
+
+        return projects;
     }
 
     public CreateProjectResponse createProject(Project project) {
+        Firestore firestoreDb = FirestoreClient.getFirestore();
         try {
             if (project.getName() == null || project.getName().isBlank()) {
                 throw new IllegalArgumentException("Name can't be empty");
             }
-            Project savedProject = projectRepo.save(project);
-            return new CreateProjectResponse(savedProject.getId(), CreateProjectResponseEnum.CREATED);
+            ApiFuture<DocumentReference> result = firestoreDb.collection(COLLECTION_NAME).add(project);
+            return new CreateProjectResponse(result.get().getId(), CreateProjectResponseEnum.CREATED);
         } catch (IllegalArgumentException e) {
             return new CreateProjectResponse(null, CreateProjectResponseEnum.EMPTY_NAME);
         } catch (Exception e) {
@@ -58,24 +62,34 @@ public class ProjectService {
         }
     }
 
-    // Transactional so we don't delete anything if one of the deletion goes wrong (the transaction doesn't go through)
-    // Only did a bulk API to train myself, but this will probably be used only for 1 deletion at a time
-    @Transactional
     public DeleteBulkProjectResponse deleteBulkProject(List<String> ids) {
+        Firestore firestoreDb = FirestoreClient.getFirestore();
         try {
             if (ids == null || ids.isEmpty()) {
                 throw new IllegalArgumentException("Ids can't be empty");
             }
             List<String> deletedIds = new ArrayList<>();
             List<NotDeleted> notDeletedIds = new ArrayList<>();
-            for (String id : ids) {
-                if (projectRepo.findById(id).isEmpty()) {
-                    notDeletedIds.add(new NotDeleted(id, NotDeletedCode.NOT_FOUND));
-                } else {
-                    projectRepo.deleteById(id);
-                    deletedIds.add(id);
-                }
-            }
+            ids.forEach(
+                    id -> {
+                        DocumentReference docRef = firestoreDb.collection(COLLECTION_NAME).document(id);
+                        ApiFuture<DocumentSnapshot> future = docRef.get();
+
+                        try {
+                            DocumentSnapshot document = future.get();
+                            if (!document.exists()) {
+                                notDeletedIds.add(new NotDeleted(id, NotDeletedCode.NOT_FOUND));
+                            } else {
+                                ApiFuture<WriteResult> deleteFuture = docRef.delete();
+                                deleteFuture.get(); // wait for doc deletion
+                                deletedIds.add(id);
+                            }
+                        } catch (ExecutionException | InterruptedException e) {
+                            notDeletedIds.add(new NotDeleted(id, NotDeletedCode.NOT_FOUND));
+                        }
+                    }
+            );
+
             if (deletedIds.isEmpty()) {
                 return new DeleteBulkProjectResponse(DeleteBulkProjectResponseEnum.NONE_DELETED, null, notDeletedIds);
             }
@@ -91,6 +105,7 @@ public class ProjectService {
     }
 
     public UpdateProjectResponse updateProject(Project updatedProject) {
+        Firestore firestoreDb = FirestoreClient.getFirestore();
         try {
             if (updatedProject.getId() == null || updatedProject.getId().isBlank()) {
                 throw new EmptyIdException("Id can't be empty");
@@ -98,10 +113,11 @@ public class ProjectService {
             if (updatedProject.getName() == null || updatedProject.getName().isBlank()) {
                 throw new EmptyNameException("Name can't be empty");
             }
-            Iterable<Project> existingProjects = projectRepo.findAll();
+
+            List<Project> existingProjects = getAllProjects();
 
             // Look for the project with the same id
-            Project correspondingProject = StreamSupport.stream(existingProjects.spliterator(), false)
+            Project correspondingProject = existingProjects.stream()
                     .filter(existingProject -> existingProject.getId().equals(updatedProject.getId()))
                     .findFirst()
                     .orElse(null);
@@ -109,13 +125,21 @@ public class ProjectService {
                 throw new NotFoundException("Project not found");
             }
             // Check for each other project if the name is already taken
-            if (StreamSupport.stream(existingProjects.spliterator(), false)
+            if (existingProjects.stream()
                     .filter(existingProject -> !existingProject.getId().equals(updatedProject.getId())) // ignore the project corresponding to the updated one
                     .anyMatch(existingProject -> existingProject.getName() != null && existingProject.getName().equals(updatedProject.getName()))) {
                 throw new NameAlreadyTakenException("Name is already taken by another project");
             }
 
-            projectRepo.save(updatedProject);
+            DocumentReference docRef = firestoreDb.collection(COLLECTION_NAME).document(correspondingProject.getId());
+            ApiFuture<WriteResult> future = docRef.update(
+                    "name", updatedProject.getName(),
+                    "description", updatedProject.getDescription(),
+                    "skills", updatedProject.getSkills(),
+                    "githubLink", updatedProject.getGithubLink()
+            );
+
+            future.get(); // wait doc update
             return new UpdateProjectResponse(UpdateProjectResponseEnum.UPDATED);
         } catch (EmptyIdException e) {
             return new UpdateProjectResponse(UpdateProjectResponseEnum.EMPTY_ID);
@@ -131,45 +155,46 @@ public class ProjectService {
     }
 
     /*
-     * Search for projects for which each filter String is contained in either the project's name, or one of its skills
+     * Search for projects for which at least one filter String is contained in either the project's name, or one of its skills (ignoring letter case)
      */
     public SearchProjectResponse searchProject(List<String> filter) {
         try {
-            if(filter != null){
+            if (filter != null) {
                 filter.removeAll(Arrays.asList("", null));
             }
 
-            List<Project> projectsList = new ArrayList<>();
-            projectRepo.findAll().forEach(projectsList::add);
+            List<Project> projectsList = getAllProjects();
 
             if (filter == null || filter.isEmpty()) {
                 return new SearchProjectResponse(SearchProjectResponseEnum.FOUND, projectsList.size(), projectsList);
             }
 
-            // this is where we filter, and sort it from oldest to most recent creation date
+            // this is where we filter, and sort it by ASC name
             List<Project> projectsToReturn = projectsList.stream()
                     .filter(project -> filter.stream()
-                            .allMatch(constraint -> isConstraintMatched(project, constraint)))
+                            .anyMatch(constraint -> isConstraintMatched(project, constraint)))
                     .sorted(Comparator.comparing(Project::getName))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (projectsToReturn.isEmpty()) {
                 return new SearchProjectResponse(SearchProjectResponseEnum.NONE_FOUND, 0, null);
             }
             return new SearchProjectResponse(SearchProjectResponseEnum.FOUND, projectsToReturn.size(), projectsToReturn);
-        } catch (Exception e) {
+        } catch (ExecutionException | InterruptedException e) {
             return new SearchProjectResponse(SearchProjectResponseEnum.UNEXPECTED_ERROR, 0, null);
         }
     }
 
     public Boolean isConstraintMatched(Project project, String constraint) {
-        if (project.getName().contains(constraint)) {
+        if (project.getName().toLowerCase().contains(constraint.toLowerCase())) {
             return true;
         }
 
         List<String> skills = project.getSkills();
         if (skills != null && !skills.isEmpty()) {
-            return skills.stream().anyMatch(constraint::contains);
+            return skills.stream()
+                    .map(String::toLowerCase)
+                    .anyMatch(constraint.toLowerCase()::contains);
         }
 
         return false;
